--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,4 @@ TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
 OPENAI_API_KEY=your_openai_api_key_here
 
 # Database Configuration
-DATABASE_URL=
+DATABASE_URL=your_database_url_here
