--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
 OPENAI_API_KEY=your_openai_api_key_here
-
-# Database Configuration
-DATABASE_URL=your_database_url_here
+DATABASE_URL=postgresql://user:password@host:port/database
+REDIS_URL=redis://localhost:6379
+EMBEDDING_MODEL=all-MiniLM-L6-v2
