--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 python-telegram-bot==21.0
-openai
+openai>=1.12.0,<2.0.0
 python-dotenv
 fastapi
 uvicorn[standard]
 aiofiles>=23.0.0,<24.0.0
+redis==5.0.1
+sentence-transformers==2.2.2
+numpy==1.24.3
+pydantic
